--- a/hov.css
+++ b/hov.css
@@ -27,7 +27,8 @@ body {
 }
 
 #header .nav-bar .logo {
-    margin-top: 0;
+    margin-top: 20px;
+    margin-left: 50px;
 }
 
 #header .nav-bar .logo a {
