--- a/styles.css
+++ b/styles.css
@@ -262,7 +262,7 @@ li {
 }
 
 /* Dots */
-.carousel-dots {
+/* .carousel-dots {
   position: absolute;
   bottom: 15px;
   right: 50%;
@@ -283,7 +283,7 @@ li {
 .carousel-dots span:hover,
 .carousel-dots span.active {
   background-color: rgba(255, 255, 255, 1);
-}
+} */
 
 /* Animation */
 @keyframes slideRight {
